<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011-2012 sakuramilk <c.sakuramilk@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TweakGNx="http://schemas.android.com/apk/res/net.sakuramilk.TweakGNx"
    android:title="Tweak Galaxy Nexus"
    android:key="parent">

    <!-- General -->
    <PreferenceScreen
        android:title="@string/general_title"
        android:icon="@drawable/ic_settings_applications">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.General.GeneralPreferenceActivity" />
    </PreferenceScreen>

    <!-- RomManager -->
    <PreferenceScreen
        android:title="@string/rom_manager_title"
        android:icon="@drawable/ic_settings_cmdevice">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.RomManager.RomManagerPreferenceActivity" />
    </PreferenceScreen>

    <!-- MultiBoot -->
    <PreferenceScreen
        android:key="multi_boot_pref"
        android:title="@string/multi_boot_title"
        android:enabled="false"
        android:selectable="false"
        android:icon="@drawable/ic_settings_storage">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.MultiBoot.MultiBootPreferenceActivity" />
    </PreferenceScreen>

    <!-- CpuControl -->
    <PreferenceScreen
        android:title="@string/cpu_control_title"
        android:icon="@drawable/ic_settings_cpu">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.CpuControl.CpuControlPreferenceActivity" />
    </PreferenceScreen>

    <!-- GpuControl -->
    <PreferenceScreen
        android:title="@string/gpu_control_title"
        android:icon="@drawable/ic_settings_gpu">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.GpuControl.GpuControlPreferenceActivity" />
    </PreferenceScreen>

    <!-- Sound and Vibrator -->
    <PreferenceScreen
        android:title="@string/sound_and_vib_title"
        android:icon="@drawable/ic_settings_sound">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.SoundAndVib.SoundAndVibPreferenceActivity" />
    </PreferenceScreen>

    <!-- Display -->
    <PreferenceScreen
        android:title="@string/display_title"
        android:icon="@drawable/ic_settings_display">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.Display.DisplayPreferenceActivity" />
    </PreferenceScreen>

    <!-- Dock -->
    <PreferenceScreen
        android:title="@string/dock_title"
        android:icon="@drawable/ic_settings_dock">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.Dock.DockPreferenceActivity" />
    </PreferenceScreen>

    <!-- About -->
    <PreferenceScreen
        android:title="@string/about_title"
        android:icon="@drawable/ic_settings_about">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="net.sakuramilk.TweakGNx"
            android:targetClass="net.sakuramilk.TweakGNx.About.AboutPreferenceActivity" />
    </PreferenceScreen>

</PreferenceScreen>